update tutorial website

--- a/tutorial-AAAI26/index.html
+++ b/tutorial-AAAI26/index.html
@@ -98,7 +98,7 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         <h5 class="card-title">Quick Info</h5>
-                        <p><strong>Duration:</strong> <span id="quick-duration">3.5 hours</span></p>
+                        <p><strong>Date:</strong> <span id="quick-date">January 20-21, 2026</span></p>
                         <p><strong>Venue:</strong> <span id="quick-venue">TBD</span></p>
                         <p><strong>Contact:</strong> <a href="mailto:" id="quick-contact">feng.liu1@unimelb.edu.au</a>
                         </p>
@@ -117,8 +117,7 @@
                         <ul class="mb-0">
                             <li>Basic machine learning knowledge</li>
                             <li>Familiarity with neural networks</li>
-                            <li>Python programming experience</li>
-                            <li>Understanding of PyTorch/TensorFlow (helpful)</li>
+                            <li>Python/PyTorch programming experience</li>
                         </ul>
                     </div>
                 </div>
