update tutorial website

--- a/tutorial-AAAI26/index.html
+++ b/tutorial-AAAI26/index.html
@@ -60,13 +60,15 @@
 
                 <h2>Why This Tutorial Matters</h2>
                 <p>
-                    The era of foundation models has created an adaptation bottleneck: how can we efficiently
-                    repurpose massive pre-trained models for specific tasks without extensive fine-tuning?
-                    Neural network reprogrammability offers a solution through input space transformations
-                    and output alignment techniques.
+                    The massive scale of Foundation Models has created an adaptation bottleneck: how can we efficiently
+                    post-train/reuse large-scale pre-trained models for specific tasks without extensive fine-tuning?
+                    <br>
+                    Neural Network Reprogrammability answers this question by offering a solution through input
+                    space
+                    manipulation and output space alignments.
                 </p>
                 <p>
-                    This tutorial introduces a unified framework encompassing three core paradigms:
+                    This unified framework encompasses three active research paradigms:
                 </p>
                 <ul>
                     <li><strong>Model Reprogramming:</strong> Learning input transformations to repurpose frozen models
