basic content of tutorial website done.

--- a/tutorial-AAAI26/index.html
+++ b/tutorial-AAAI26/index.html
@@ -144,8 +144,8 @@
         <div class="container text-center">
             <p class="mb-0">
                 Part of <a href="../">awesome-reprogrammability</a> |
-                Contact: <a href="mailto:feng.liu1@unimelb.edu.au">feng.liu1@unimelb.edu.au</a> |
-                <a href="https://github.com/username/awesome-reprogrammability" target="_blank">GitHub</a>
+                Contact: <a href="mailto:zesheng.ye@unimelb.edu.au">Zesheng Ye</a> |
+                <a href="https://github.com/zyecs/awesome-reprogrammability" target="_blank">GitHub</a>
             </p>
         </div>
     </footer>
