--- a/tutorial-AAAI26/program.html
+++ b/tutorial-AAAI26/program.html
@@ -1,3 +1,4 @@
+a
 <!DOCTYPE html>
 <html lang="en">
 
@@ -41,9 +42,9 @@
             <h1>Tutorial Program</h1>
             <p class="lead">3 sessions with breaks • Total duration: 3.5 hours</p>
             <div class="badges">
-                <span class="badge bg-primary">Interactive</span>
-                <span class="badge bg-success">Hands-on</span>
-                <span class="badge bg-info">Code Examples</span>
+                <span class="badge bg-primary">Theory and Foundation</span>
+                <span class="badge bg-success">Method and Examples</span>
+                <span class="badge bg-info">Implications and Perspectives</span>
             </div>
         </div>
 
@@ -101,7 +102,7 @@
                         <h3>Interactive Elements</h3>
                         <ul>
                             <li><strong>Live Coding:</strong> Step-by-step implementation demonstrations</li>
-                            <li><strong>Q&A Sessions:</strong> Interactive discussions after each session</li>
+                            <li><strong>Q&A Sessions:</strong> Discussions after each session</li>
                             <li><strong>Hands-on Exercises:</strong> Practice with provided code examples</li>
                             <li><strong>Case Studies:</strong> Real-world application walkthroughs</li>
                         </ul>
@@ -113,11 +114,11 @@
                     <div class="card-body">
                         <h3>What to Bring</h3>
                         <ul>
-                            <li>Laptop with Python 3.8+ installed</li>
-                            <li>PyTorch or TensorFlow environment</li>
-                            <li>Jupyter notebook support</li>
-                            <li>Git for accessing tutorial materials</li>
+                            <li>Laptop with PyTorch environment installed</li>
                             <li>Basic familiarity with deep learning concepts</li>
+                            <li>Curiosity and enthusiasm! ^^</li>
+                            <!-- <li>Jupyter notebook support</li> -->
+                            <!-- <li>Git for accessing tutorial materials</li> -->
                         </ul>
                     </div>
                 </div>
@@ -129,8 +130,8 @@
         <div class="container text-center">
             <p class="mb-0">
                 Part of <a href="../">awesome-reprogrammability</a> |
-                Contact: <a href="mailto:feng.liu1@unimelb.edu.au">feng.liu1@unimelb.edu.au</a> |
-                <a href="https://github.com/username/awesome-reprogrammability" target="_blank">GitHub</a>
+                Contact: <a href="mailto:zesheng.ye@unimelb.edu.au">Zesheng Ye</a> |
+                <a href="https://github.com/zyecs/awesome-reprogrammability" target="_blank">GitHub</a>
             </p>
         </div>
     </footer>
