--- a/tutorial-AAAI26/speakers.html
+++ b/tutorial-AAAI26/speakers.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutorial Presenters - Neural Network Reprogrammability</title>
     <meta name="description"
-        content="Meet the expert presenters for the Neural Network Reprogrammability tutorial at AAAI 2026">
+        content="Meet the presenters for the Neural Network Reprogrammability tutorial at AAAI 2026">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="css/academic.css" rel="stylesheet">
@@ -39,7 +39,7 @@
         <!-- Speakers Header -->
         <div class="text-center mb-5">
             <h1>Tutorial Presenters</h1>
-            <p class="lead">Meet the experts who will guide you through neural network reprogrammability</p>
+            <p class="lead">Meet the presenters who will guide you through neural network reprogrammability</p>
         </div>
 
         <!-- Speakers Grid -->
@@ -91,7 +91,7 @@
                         <p>Our speakers have collectively contributed to:</p>
                         <ul>
                             <li>Foundational survey papers on neural network reprogrammability</li>
-                            <li>Novel input manipulation and prompt tuning techniques</li>
+                            <li>New model reprogramming and prompt tuning techniques</li>
                             <li>Adversarial robustness and trustworthy AI frameworks</li>
                             <li>Cross-domain applications in vision, NLP, and multimodal learning</li>
                             <li>Open-source implementations and educational resources</li>
@@ -106,7 +106,7 @@
                         <p>This tutorial emphasizes:</p>
                         <ul>
                             <li><strong>Unified Framework:</strong> Connecting disparate techniques under one
-                                theoretical umbrella</li>
+                                methodology umbrella</li>
                             <li><strong>Practical Focus:</strong> Hands-on implementation with real code examples</li>
                             <li><strong>Broader Impact:</strong> Considering societal implications and responsible AI
                             </li>
@@ -151,8 +151,8 @@
         <div class="container text-center">
             <p class="mb-0">
                 Part of <a href="../">awesome-reprogrammability</a> |
-                Contact: <a href="mailto:feng.liu1@unimelb.edu.au">feng.liu1@unimelb.edu.au</a> |
-                <a href="https://github.com/username/awesome-reprogrammability" target="_blank">GitHub</a>
+                Contact: <a href="mailto:zesheng.ye@unimelb.edu.au">Zesheng Ye</a> |
+                <a href="https://github.com/zyecs/awesome-reprogrammability" target="_blank">GitHub</a>
             </p>
         </div>
     </footer>
