deploy: c08797dd600476a60ef0de4e294324252924b514

--- a/sections/papers/index.html
+++ b/sections/papers/index.html
@@ -111,6 +111,14 @@
 <td>EMNLP/IJCNLP</td>
 </tr>
 <tr>
+<td><a href="https://arxiv.org/abs/2005.14165">Language Models are Few-Shot Learners</a> BROWN et al. (2020)</td>
+<td>Fixed</td>
+<td>input-space</td>
+<td>Concatenative (CO)</td>
+<td>Identity (ID)</td>
+<td>NeurIPS</td>
+</tr>
+<tr>
 <td><a href="https://arxiv.org/abs/2012.03460">Reprogramming Language Models for Molecular Representation Learning</a> Vinod et al. (2020)</td>
 <td>Learnable</td>
 <td>Input ($\mathcal{X}_S$)</td>
