--- a/tutorial-AAAI26/program.html
+++ b/tutorial-AAAI26/program.html
@@ -101,7 +101,7 @@ a
                     <div class="card-body">
                         <h3>Interactive Elements</h3>
                         <ul>
-                            <li><strong>Live Coding:</strong> Step-by-step implementation demonstrations</li>
+                            <!-- <li><strong>Live Coding:</strong> Step-by-step implementation demonstrations</li> -->
                             <li><strong>Q&A Sessions:</strong> Discussions after each session</li>
                             <li><strong>Hands-on Exercises:</strong> Practice with provided code examples</li>
                             <li><strong>Case Studies:</strong> Real-world application walkthroughs</li>
@@ -114,8 +114,8 @@ a
                     <div class="card-body">
                         <h3>What to Bring</h3>
                         <ul>
-                            <li>Laptop with PyTorch environment installed</li>
                             <li>Basic familiarity with deep learning concepts</li>
+                            <li>Laptop with PyTorch environment installed (optional) </li>
                             <li>Curiosity and enthusiasm! ^^</li>
                             <!-- <li>Jupyter notebook support</li> -->
                             <!-- <li>Git for accessing tutorial materials</li> -->
