--- a/tutorial-AAAI26/speakers.html
+++ b/tutorial-AAAI26/speakers.html
@@ -52,7 +52,7 @@
             <div class="col-md-8 mx-auto">
                 <div class="card">
                     <div class="card-body text-center">
-                        <h3>Collaborative Expertise</h3>
+                        <h3>Expertise</h3>
                         <p class="lead">
                             This tutorial brings together complementary expertise spanning theoretical foundations,
                             practical implementation, and trustworthy AI considerations.
