--- a/tutorial-AAAI26/index.html
+++ b/tutorial-AAAI26/index.html
@@ -44,7 +44,10 @@
                 <span class="badge bg-primary" id="conference">AAAI 2026</span>
                 <span class="badge bg-secondary" id="duration">3.5 hours</span>
             </div>
-            <a href="#" id="official-link" class="btn btn-outline-primary mt-3" target="_blank">Official AAAI Page</a>
+            <div class="mt-3">
+                <a href="#" id="official-link" class="btn btn-outline-primary me-2" target="_blank">Official AAAI Page</a>
+                <a href="https://aaai.org/conference/aaai/aaai-26/tutorial-and-lab-forum/" class="btn btn-outline-secondary" target="_blank">AAAI Tutorial Forum</a>
+            </div>
         </div>
 
         <div class="row">
@@ -127,7 +130,7 @@
 
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Key Resources</h5>
+                        <h5 class="card-title">Resources</h5>
                         <div class="d-grid gap-2">
                             <a href="materials.html" class="btn btn-outline-secondary btn-sm">📚 Reading List</a>
                             <a href="https://arxiv.org/abs/2506.04650" class="btn btn-outline-secondary btn-sm"
