Update slides linking and styling
- Replace separate View Slides button with Slides button in program page
- Link Slides button directly to session PDF files
- Update materials.json with actual PDF slide URLs
- Change slides badge color to bright cyan (bg-info) for better visibility
- Fix session titles in materials to match program sessions

--- a/tutorial-AAAI26/program.html
+++ b/tutorial-AAAI26/program.html
@@ -155,13 +155,9 @@
                                 title="Add this session to your calendar">
                                 📅 Add to Calendar
                             </button>
-                            <a href="#" class="btn btn-sm btn-primary slides-link" style="display:none"
+                            <a href="#" class="btn btn-sm btn-primary materials-link"
                                 title="View session slides">
-                                📄 View Slides
-                            </a>
-                            <a href="materials.html" class="btn btn-sm btn-outline-secondary"
-                                title="Access all materials">
-                                💾 Materials
+                                📄 Slides
                             </a>
                         </div>
                     </div>
